# VirtualLogicEngine

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md
IncludeDir/imgui-node-editor/: imgui_canvas.h  imgui_extra_math.h  imgui_node_editor.h  imgui_node_editor_internal.h
IncludeDir/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/: glad.c  main.cpp
src/GodotBindings/: GDVirtualLogicEngine.cpp  register_types.cpp
src/GodotBindings/headers/: GDVirtualLogicEngine.h  register_types.h
src/Renderer/: SimulationBridge.cpp  WindowInstance.cpp
src/Renderer/headers/: SimulationBridge.h  WindowInstance.h
src/core/: Circuit.cpp  Circuit.hpp  CircuitComponent.cpp  CircuitComponent.hpp  Device.cpp  Device.hpp  Simulation.cpp  Simulation.hpp
src/glad/: glad.h
src/other/: DynamicBitset.hpp
src/simulator/: Circuit.cpp  Gate.cpp  MacroGate.cpp  ThreadPool.cpp  TickRunner.cpp  Wire.cpp
src/simulator/headers/: Circuit.h  Gate.h  MacroGate.h  ThreadPool.h  TickRunner.h  Wire.h
